--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>WORDLE</title>
+    <meta content="Agustin Lopez Villagra" name="autor">
+    <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
+    <meta content="wordle, palabras, adivinar" name="palabras-principales">
 </head>
 <body>
 
