se agrego archivo comoJugar.html

--- a/comoJugar.html
+++ b/comoJugar.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>WORDLE</title>
+    <meta content="Agustin Lopez Villagra" name="autor">
+    <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
+    <meta content="wordle, palabras, adivinar" name="palabras-principales">
+    <link rel="stylesheet" href="miEstilo.css" type="text/css">
 </head>
-<body>
-$END$
+<body class="comoJugar">
+<header><h1><span class="amarillo">C</span>O<span class="verde">M</span>O <span class="amarillo">J</span>U<span class="amarillo">G</span>AR</h1></header>
+<div>ADIVINA LA PALABRA OCULTA EN SEIS INTENTOS PARA SUMAR 100 PUNTOS</div>
+<div>CADA INTENTO DEBE SER UNA PALABRA VALIDA DE CINCO LETRAS</div>
+<div>DESPUES DE CADA INTENTO, EL COLOR DE LAS LETRAS CAMBIA PARA MOSTRAR QUE TAN CERCA ESTAS DE ACERTAR LA PALABRA</div>
+<div></div>
+<div>LA LETRA N ESTA EN LA PALABRA PERO EN LA POSICION INCORRECTA</div>
+<div>LA LETRA U ESTA EN LA PALABRA PERO EN LA POSICION CORRECTA</div>
+<div><a class="botonesCJ" href="index.html">INICIO</a></div>
+<div><a class="botonesCJ" href="jugar.html">JUGAR</a></div>
 </body>
 </html>
