se agrego archivo jugar.html

--- a/jugar.html
+++ b/jugar.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>WORDLE</title>
+    <meta content="Agustin Lopez Villagra" name="autor">
+    <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
+    <meta content="wordle, palabras, adivinar" name="palabras-principales">
+    <link rel="stylesheet" href="miEstilo.css" type="text/css">
 </head>
 <body>
-$END$
+
 </body>
 </html>
