se modifico el index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta content="Agustin Lopez Villagra" name="autor">
     <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
     <meta content="wordle, palabras, adivinar" name="palabras-principales">
+    <link rel="stylesheet" href="miEstilo.css" type="text/css">
 </head>
 <body>
+<header class="inicio"><h1>W<span class="verde">O</span>RD<span class="verde">L</span><span class="amarillo">E</span></h1></header>
+<div>
+    <nav><a class="botonesInicio" href="jugar.html">JUGAR</a></nav>
+</div>
+<div>
+    <nav><a class="botonesInicio" href="comoJugar.html">COMO JUGAR</a></nav>
+</div>
 
 </body>
 </html>
