se modifico jugar.html

--- a/jugar.html
+++ b/jugar.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
 </head>
 <body>
+<header><h2>PUNTAJE: </h2></header>
+<div><a class="botonesCJ" href="index.html">INICIO</a></div>
 
 </body>
 </html>
