Se agrega tablero

--- a/jugar.html
+++ b/jugar.html
@@ -9,8 +9,53 @@
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
 </head>
 <body>
-<header><h2>PUNTAJE: </h2></header>
-<div><a class="botonesCJ" href="index.html">INICIO</a></div>
+<div>PUNTAJE: X</div>
+<table>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
+
+<div><a class="boton" href="index.html">INICIO</a></div>
 
 </body>
 </html>
