Cambios en css, favicon

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
     <meta content="wordle, palabras, adivinar" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
+    <link rel="shorcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
 </head>
-<body>
-<header class="inicio"><h1>W<span class="verde">O</span>RD<span class="verde">L</span><span class="amarillo">E</span></h1></header>
+<body id="principal">
+<header class="inicio">
+    <h1>W<span class="verde">O</span>RD<span class="verde">L</span><span class="amarillo">E</span>
+    </h1>
+</header>
 <div>
-    <nav><a class="botonesInicio" href="jugar.html">JUGAR</a></nav>
+    <nav><a class="boton" href="jugar.html">JUGAR</a></nav>
 </div>
 <div>
-    <nav><a class="botonesInicio" href="comoJugar.html">COMO JUGAR</a></nav>
+    <nav><a class="boton" href="comoJugar.html">COMO JUGAR</a></nav>
 </div>
 
 </body>
