--- a/comoJugar.html
+++ b/comoJugar.html
@@ -8,15 +8,28 @@
     <meta content="wordle, palabras, adivinar" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
 </head>
-<body class="comoJugar">
-<header><h1><span class="amarillo">C</span>O<span class="verde">M</span>O <span class="amarillo">J</span>U<span class="amarillo">G</span>AR</h1></header>
-<div>ADIVINA LA PALABRA OCULTA EN SEIS INTENTOS PARA SUMAR 100 PUNTOS</div>
-<div>CADA INTENTO DEBE SER UNA PALABRA VALIDA DE CINCO LETRAS</div>
-<div>DESPUES DE CADA INTENTO, EL COLOR DE LAS LETRAS CAMBIA PARA MOSTRAR QUE TAN CERCA ESTAS DE ACERTAR LA PALABRA</div>
-<div></div>
-<div>LA LETRA N ESTA EN LA PALABRA PERO EN LA POSICION INCORRECTA</div>
-<div>LA LETRA U ESTA EN LA PALABRA PERO EN LA POSICION CORRECTA</div>
-<div><a class="botonesCJ" href="index.html">INICIO</a></div>
-<div><a class="botonesCJ" href="jugar.html">JUGAR</a></div>
+<body>
+<header>
+    <h1><span class="amarillo">C</span>O<span class="verde">M</span>O <span class="amarillo">J</span>U<span
+            class="amarillo">G</span>AR</h1>
+</header>
+<p>ADIVINA LA PALABRA OCULTA EN SEIS INTENTOS PARA SUMAR 100 PUNTOS</p>
+<p>CADA INTENTO DEBE SER UNA PALABRA VALIDA DE CINCO LETRAS</p>
+<p>DESPUES DE CADA INTENTO, EL COLOR DE LAS LETRAS CAMBIA PARA MOSTRAR<br> QUE TAN CERCA ESTAS DE ACERTAR LA PALABRA</p>
+<table>
+    <tr>
+        <td>B</td>
+        <td><span class="verde">U</span></td>
+        <td>E</td>
+        <td><span class="amarillo">N</span></td>
+        <td>A</td>
+    </tr>
+</table>
+<p>LA "U" ESTA EN LA PALABRA Y EN LA POSICION CORRECTA</p>
+<p>LA "N" ESTA EN LA PALABRA PERO EN LA POSICION INCORRECTA</p>
+<div>
+    <a class="boton" href="index.html">INICIO</a>
+    <a class="boton" href="jugar.html">JUGAR</a>
+</div>
 </body>
 </html>
