Se agrega efectos en botones y carteles de aviso

--- a/comoJugar.html
+++ b/comoJugar.html
@@ -27,9 +27,10 @@
 </table>
 <p>LA "U" ESTA EN LA PALABRA Y EN LA POSICION CORRECTA</p>
 <p>LA "N" ESTA EN LA PALABRA PERO EN LA POSICION INCORRECTA</p>
-<div>
+<div class="botonesComojugar">
     <a class="boton" href="index.html">INICIO</a>
     <a class="boton" href="jugar.html">JUGAR</a>
 </div>
+
 </body>
 </html>
