--- a/jugar.html
+++ b/jugar.html
@@ -56,6 +56,23 @@
 </table>
 
 <div><a class="boton" href="index.html">INICIO</a></div>
+<div>
+    <div class="carteles">
+        <p>ADIVINASTE!!</p>
+        <p>+100</p>
+        <a class="boton">SIGUIENTE WORDLE</a>
+    </div>
+    <div class="carteles">
+        <p>GAME OVER</p>
+        <p>PUNTAJE FINAL: X</p>
+        <a class="boton">INICIO</a>
+    </div>
+    <div class="carteles">
+        <p>SI PRESIONAS VOLVER, <br>TU PUNTAJE SE PERDERA</p>
+        <a class="boton">VOLVER</a>
+        <a class="boton">SEGUIR</a>
+    </div>
+</div>
 
 </body>
 </html>
