ultimos detalles parcial

--- a/comoJugar.html
+++ b/comoJugar.html
@@ -13,10 +13,13 @@
     <h1><span class="amarillo">C</span>O<span class="verde">M</span>O <span class="amarillo">J</span>U<span
             class="amarillo">G</span>AR</h1>
 </header>
-<p>ADIVINA LA PALABRA OCULTA EN SEIS INTENTOS PARA SUMAR 100 PUNTOS</p>
-<p>CADA INTENTO DEBE SER UNA PALABRA VALIDA DE CINCO LETRAS</p>
-<p>DESPUES DE CADA INTENTO, EL COLOR DE LAS LETRAS CAMBIA PARA MOSTRAR<br> QUE TAN CERCA ESTAS DE ACERTAR LA PALABRA</p>
-<table>
+<div class="comojugar">
+    <p>ADIVINA LA PALABRA OCULTA EN SEIS INTENTOS PARA SUMAR 100 PUNTOS</p>
+    <p>CADA INTENTO DEBE SER UNA PALABRA VALIDA DE CINCO LETRAS</p>
+    <p>DESPUES DE CADA INTENTO, EL COLOR DE LAS LETRAS CAMBIA PARA MOSTRAR<br> QUE TAN CERCA ESTAS DE ACERTAR LA PALABRA
+    </p>
+</div>
+<table class="tablero">
     <tr>
         <td>B</td>
         <td><span class="verde">U</span></td>
@@ -25,8 +28,10 @@
         <td>A</td>
     </tr>
 </table>
-<p>LA "U" ESTA EN LA PALABRA Y EN LA POSICION CORRECTA</p>
-<p>LA "N" ESTA EN LA PALABRA PERO EN LA POSICION INCORRECTA</p>
+<div class="comojugar">
+    <p>LA "U" ESTA EN LA PALABRA Y EN LA POSICION CORRECTA</p>
+    <p>LA "N" ESTA EN LA PALABRA PERO EN LA POSICION INCORRECTA</p>
+</div>
 <div class="botonesComojugar">
     <a class="boton" href="index.html">INICIO</a>
     <a class="boton" href="jugar.html">JUGAR</a>
