correccion de botones

--- a/jugar.html
+++ b/jugar.html
@@ -66,7 +66,7 @@
         <img src="Imagenes/trophy.png" alt="Trofeo">
         <p>ADIVINASTE!!</p>
         <p>+100</p>
-        <a class="boton" href="jugar.html">SIGUIENTE WORDLE</a>
+        <button href="jugar.html">SIGUIENTE WORDLE</button>
     </div>
     <div class="cartelRojo">
         <p id="gameover">GAME<br>OVER</p>
@@ -77,7 +77,7 @@
         <img src="Imagenes/6514911.png" alt="Cartel de advertencia">
         <p>SI PRESIONAS VOLVER, <br>TU PUNTAJE SE PERDERA</p>
         <a class="boton" href="index.html">VOLVER</a>
-        <a class="boton" href="jugar.html">SEGUIR</a>
+        <button href="jugar.html">SEGUIR</button>
     </div>
 </div>
 </body>
