se agrgaron funciones js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta content="wordle, palabras, adivinar" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
     <link rel="shorcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
+    <script type="text/javascript" src="funcionesJs.js"></script>
 </head>
 <body id="principal">
 <header class="inicio">
@@ -15,7 +16,7 @@
     </h1>
 </header>
 <div>
-    <nav><a class="boton" href="jugar.html">JUGAR</a></nav>
+    <nav><a class="boton" href="jugar.html" id="jugar" onclick="palabraAAdivinar()">JUGAR</a></nav>
 </div>
 <div>
     <nav><a class="boton" href="comoJugar.html">COMO JUGAR</a></nav>
