--- a/jugar.html
+++ b/jugar.html
@@ -7,73 +7,77 @@
     <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
     <meta content="wordle, palabras, adivinar" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
+    <script type="text/javascript" src="funcionesJs.js"></script>
 </head>
 <body>
 <div>PUNTAJE: X</div>
-<table class="tablero">
+<table class="tablero" id="tablero">
     <caption>W<span class="verde">O</span>RD<span class="verde">L</span><span class="amarillo">E</span></caption>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <tbody>
+    <tr class="intento">
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
     </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <tr class="intento">
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
     </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <tr class="intento">
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
     </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <tr class="intento">
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
     </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <tr class="intento">
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
     </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <tr class="intento">
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><input type="text" name="letra" disabled></td>
     </tr>
+    </tbody>
 </table>
 <div id="ingresarPalabra">
-    <label for="palabra">INGRESE UNA PALABRA: <br></label>
-    <input type="text" id="palabra" name="palabra" maxlength="5">
+    <label id="labelCargar" for="cargar">INGRESE UNA PALABRA: <br></label>
+    <input type="text" id="cargar" maxlength="5" oninput="cargarPalabra()">
+    <p id="mostrarPalabra" onchange="compararPalabra()"></p>
 </div>
 <div><a class="boton" href="index.html">INICIO</a></div>
 
 <div class="carteles">
-    <div class="cartelVerde">
+    <div id="ganaste" lass="cartelVerde">
         <img src="Imagenes/trophy.png" alt="Trofeo">
         <p>ADIVINASTE!!</p>
         <p>+100</p>
         <button href="jugar.html">SIGUIENTE WORDLE</button>
     </div>
-    <div class="cartelRojo">
+    <div id="perdiste" class="cartelRojo">
         <p id="gameover">GAME<br>OVER</p>
         <p>PUNTAJE FINAL: X</p>
         <a class="boton" href="index.html">INICIO</a>
     </div>
-    <div class="cartelRojo">
+    <div id="alInicio" class="cartelRojo">
         <img src="Imagenes/6514911.png" alt="Cartel de advertencia">
         <p>SI PRESIONAS VOLVER, <br>TU PUNTAJE SE PERDERA</p>
         <a class="boton" href="index.html">VOLVER</a>
