--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 <div>
     <nav><a class="boton" href="comoJugar.html">COMO JUGAR</a></nav>
 </div>
-<canvas></canvas>
+<footer>Laboratorio de computacion II 2023</footer>
 </body>
 </html>
