--- a/comoJugar.html
+++ b/comoJugar.html
@@ -20,6 +20,7 @@
     </p>
 </div>
 <table class="tablero">
+    <caption>POR EJEMPLO:</caption>
     <tr>
         <td>B</td>
         <td><span class="verde">U</span></td>
