--- a/comoJugar.html
+++ b/comoJugar.html
@@ -7,6 +7,7 @@
     <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
     <meta content="wordle, palabras, adivinar" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
+    <link rel="shorcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <header>
