--- a/jugar.html
+++ b/jugar.html
@@ -7,10 +7,11 @@
     <meta content="Juego de palabras tipo 'Wordle'" name="descripcion">
     <meta content="wordle, palabras, adivinar" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
+    <link rel="shorcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="funcionesJs.js"></script>
 </head>
-<body onload="dibujarCuadrados()">
-<div id="puntosDiv">PUNTAJE<br><input id="puntaje" onchange="puntaje(this.value)" value="0"></div>
+<body onload="canvas();setInterval(canvas, 20)">
+<div class="puntosDiv">PUNTAJE<br><input type="text" class="puntaje" onload="mostrarPuntaje()" value="0"></div>
 
 <table class="tablero" id="tablero">
     <caption>W<span class="verde">O</span>RD<span class="verde">L</span><span class="amarillo">E</span></caption>
@@ -61,7 +62,7 @@
 </table>
 <div id="ingresarPalabra">
     <label id="labelCargar" for="cargar">INGRESE UNA PALABRA: <br></label>
-    <input type="text" id="cargar" maxlength="5" oninput="cargarPalabra()">
+    <input type="text" id="cargar" maxlength="5" oninput="cargarPalabra(this.value)">
 
 </div>
 <div><button class="boton" onclick="botonInicio()">INICIO</button></div>
@@ -74,7 +75,7 @@
     </div>
     <div id="perdiste" class="cartelRojo">
         <p id="gameover">GAME<br>OVER</p>
-        <p>PUNTAJE FINAL: X</p>
+        <p>PUNTAJE FINAL: <input type="text" class="puntaje" onchange="mostrarPuntaje()"></p>
         <p id="mostrarPalabra" onchange="compararPalabra()"></p>
     </div>
     <div id="alInicio" class="cartelRojo">
