--- a/jugar.html
+++ b/jugar.html
@@ -17,46 +17,106 @@
     <caption>W<span class="verde">O</span>RD<span class="verde">L</span><span class="amarillo">E</span></caption>
     <tbody >
     <tr class="intento">
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
     </tr>
     <tr class="intento">
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
     </tr>
     <tr class="intento">
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
     </tr>
     <tr class="intento">
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
     </tr>
     <tr class="intento">
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
     </tr>
     <tr class="intento">
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
-        <td class="celda"><input type="text" name="letra" disabled></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
+        <td class="celda"><label>
+            <input type="text" name="letra" disabled>
+        </label></td>
     </tr>
     </tbody>
 </table>
@@ -82,7 +142,7 @@
         <img src="Imagenes/6514911.png" alt="Cartel de advertencia">
         <p>SI PRESIONAS VOLVER, <br>TU PUNTAJE SE PERDERA</p>
         <a class="boton" href="index.html">VOLVER</a>
-        <button href="jugar.html" onclick="botonSeguirJugando()">SEGUIR</button>
+        <button type="button"  onclick="href='jugar.html';botonSeguirJugando()">SEGUIR</button>
     </div>
 </div>
 <canvas id="myCanvas"></canvas>
