--- a/jugar.html
+++ b/jugar.html
@@ -133,11 +133,11 @@
         <img src="Imagenes/trophy.png" alt="Trofeo">
         <p>ADIVINASTE!!</p>
         <p>+100</p>
-        <button type="button" onclick="guardarPuntaje();">SIGUIENTE WORDLE</button>
+        <button type="button" onclick="guardarPuntaje()">SIGUIENTE WORDLE</button>
     </div>
     <div id="perdiste" class="cartelRojo">
         <p id="gameover">GAME<br>OVER</p>
-        <p id="puntajeFinal">PUNTAJE FINAL 0</p>
+        <p id="puntajeFinal"></p>
         <p id="mostrarPalabra" onchange="compararPalabra()"></p>
     </div>
     <div id="alInicio" class="cartelRojo">
