--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="shorcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="funcionesJs.js"></script>
 </head>
-<body id="principal">
+<body id="principal" onload="limpiarPuntaje()">
 <header class="inicio">
     <h1>W<span class="verde">O</span>RD<span class="verde">L</span><span class="amarillo">E</span>
     </h1>
 </header>
 <div>
-    <nav><a class="boton" href="jugar.html" id="jugar" onclick="palabraAAdivinar()">JUGAR</a></nav>
+    <nav><a class="boton" href="jugar.html" id="jugar">JUGAR</a></nav>
 </div>
 <div>
     <nav><a class="boton" href="comoJugar.html">COMO JUGAR</a></nav>
