--- a/jugar.html
+++ b/jugar.html
@@ -10,7 +10,7 @@
     <link rel="shorcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="funcionesJs.js"></script>
 </head>
-<body onload="canvas();setInterval(canvas, 20);mostrarPuntaje();palabraAAdivinar()">
+<body onload="setInterval(canvas, 20);mostrarPuntaje();palabraAAdivinar()">
 <div id="puntajeArriba" class="puntosDiv"></div>
 
 <table class="tablero" id="tablero">
