--- a/jugar.html
+++ b/jugar.html
@@ -141,7 +141,7 @@
         <p id="mostrarPalabra" onchange="compararPalabra()"></p>
     </div>
     <div id="alInicio" class="cartelRojo">
-        <img src="Imagenes/6514911.png" alt="Cartel de advertencia">
+        <img src="Imagenes/6514911.png" alt="Cartel de advertencia triangular con signo de exclamación en el medio">
         <p>SI PRESIONAS VOLVER, <br>TU PUNTAJE SE PERDERA</p>
         <a class="boton" href="index.html">VOLVER</a>
         <button type="button" onclick="href='jugar.html';botonSeguirJugando()">SEGUIR</button>
