--- a/jugar.html
+++ b/jugar.html
@@ -133,7 +133,7 @@
         <img src="Imagenes/trophy.png" alt="Trofeo">
         <p>ADIVINASTE!!</p>
         <p>+100</p>
-        <button type="button" onclick="guardarPuntaje()">SIGUIENTE WORDLE</button>
+        <button type="button" onclick="guardarPuntaje();limpiarCanvas()">SIGUIENTE WORDLE</button>
     </div>
     <div id="perdiste" class="cartelRojo">
         <p id="gameover">GAME<br>OVER</p>
