--- a/jugar.html
+++ b/jugar.html
@@ -138,7 +138,7 @@
     <div id="perdiste" class="cartelRojo">
         <p id="gameover">GAME<br>OVER</p>
         <p id="puntajeFinal"></p>
-        <p id="mostrarPalabra" onchange="compararPalabra()"></p>
+        <p id="mostrarPalabra" onchange="compararPalabra(this.value)"></p>
     </div>
     <div id="alInicio" class="cartelRojo">
         <img src="Imagenes/6514911.png" alt="Cartel de advertencia triangular con signo de exclamación en el medio">
